Fix Overflow and positions

--- a/css/custom.css
+++ b/css/custom.css
@@ -29,8 +29,6 @@ material-card.groupCard{
   max-width: 300px;
   min-width: 300px;
   padding: 16px 16px 0 16px;
-  position: relative;
-  z-index: 0;
 }
 
 material-card.groupCard h3{
@@ -189,7 +187,6 @@ core-icon-button:focus{
   display: inline-block;
   vertical-align: top;
   position: relative;
-  z-index: 0;
 }
 .quilt {
   display: inline-block;
